spacing fix

--- a/src/components/IconLibrary/icon-library.scss
+++ b/src/components/IconLibrary/icon-library.scss
@@ -5,6 +5,6 @@
 .icon-search--status {
   position: absolute;
   top: 3.6rem;
-  padding-left: $spacing-04;
+  padding-left: $spacing-05;
   @include carbon--type-style('body-short-02');
 }
